testsuite/tests/grammar/invalid_lexers/case_6.lkt
import common

lexer foo_example {
    Foo <- null
    match p"foo" {
        if previous_token is Foo then send(Foo, 3)
        else send(Foo, Foo)
    }
}
